--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,12 +5,7 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background: #f0f0f5;
   -webkit-font-smoothing: antialiased;
-
-  h1 {
-    font-size: 20px;
-    color: #9c1010;
-  }
+  font: 1rem "Helvetica Neue", Arial, sans-serif;
+  color: #121214;
 }
